--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -13,7 +15,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
